# transcribe

./: README.md  Taskfile.yml  app.Dockerfile  main.py  setup.cfg  tests.Dockerfile
src/transcribe/entities/: __init__.py  episode.py  transcript.py
src/transcribe/interfaces/: __init__.py  episode_repository.py
src/transcribe/providers/: episode_fake.py
src/transcribe/usecases/: __init__.py  retrieve_segment_transcript.py
tests/testdata/: episode_1.txt
tests/unit/: test_episode.py  test_retrieve_segment_transcript.py
