[metadata]
name = transcribe
version = attr: transcribe.__version__
description = Library that allows users to transcribe a segment of audio
url = https://github.com/strafael/transcribe
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = transcribe
py_modules =
install_requires =

[options.entry_points]
console_scripts =

# Optional requirements
[options.extras_require]
dev =
    pytest==6.2.5

[options.packages.find]
where=src

[options.package_data]
